--- a/justice/style.css
+++ b/justice/style.css
@@ -14,12 +14,119 @@ body{
 }
 .logo{
 	font-family: "Poppins", "sans-serif";
-	
 	transform: scale(200%);
 	padding-top: 35px;
 	color: white;
 	width: 100px;
 	height:100px
+}
+button{
+	margin:20px;
+}
+
+.btn{
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 150px;
+	height: 50px;
+	margin: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.btn a{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgba(255, 255, 255, 0.05);
+	box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+	border-top: 1px solid rgba(255, 255, 255, 0.1);
+	border-radius: 30px;
+	padding: 10px;
+	letter-spacing: 1px;
+	text-decoration: none;
+	overflow: hidden;
+	color: #fff;
+	font-weight: 400px;
+	z-index: 1;
+	transition: 0.5s;
+	backdrop-filter: blur(15px);
+}
+.btn:hover a{
+	letter-spacing: 3px;
+}
+.btn a::before{
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	background: linear-gradient(to left, rgba(255, 255, 255, 0.15), transparent);
+	transform: skewX(45deg) translate(0);
+	transition: 0.5s;
+	filter: blur(0px);
+}
+.btn:hover a::before{
+	transform: skewX(45deg) translate(200px);
+	-webkit-transform: skewX(45deg) translate(200px);
+	-moz-transform: skewX(45deg) translate(200px);
+	-ms-transform: skewX(45deg) translate(200px);
+	-o-transform: skewX(45deg) translate(200px);
+}
+.btn::before{
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translatex(-50%);
+	bottom: 1px;
+	width: 30px;
+	height: 10px;
+	background: #fff;
+	border-radius: 10px;
+	transition: 0.5s;
+	transition-delay: 0.5;
+}
+.btn:hover::before{
+	bottom: 0;
+	height: 50;
+	width: 80;
+	border-radius: 30px;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	-ms-border-radius: 30px;
+	-o-border-radius: 30px;
+}
+.btn::after{
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translatex(-50%);
+	top: 1px;
+	width: 30px;
+	height: 10px;
+	background: #fff;
+	border-radius: 10px;
+	transition: 0.5s;
+	transition-delay: 0.5;
+}
+.btn:hover::after{
+	top: 0;
+	height: 50%;
+	width: 80%;
+	border-radius: 30px;
+}
+.btn:nth-child(1)::before, .container .btn:nth-child(1)::after{
+	background: #fff;
+	box-shadow: 0 0 5px #fff, 0 0 15px #fff, 0 0 30px #fff,
+		0 0 60px #fff;
 }
 header{
 	position: absolute;
@@ -43,54 +150,13 @@ header ul{
 	list-style: none;
 	align-items: center;
 }
-header ul a{
-	text-decoration: none;
-	color: white;
-	padding: 0 1.5rem;
-	text-transform: uppercase;
-	font-weight: 300;
 
-}
 .cart a{
 	font-size: 1.05;
 	padding: 0 3 rem;
 
 }
-.hamburger a{
-	padding: 0;
-	width: 37px;
-	height: 37px;
-	border-radius: 50%;
-	display: flex;
-	background-color: rgba(115,115,115,0.7);
-	backdrop-filter: blur(10px);
-	-webkit-backdrop-filter: blur(10px);
-	justify-content: center;
-	align-items: center;
-}
-.hamburger .bar{
-	position: relative;
-	width: 52%;
-	height: 1.3px;
-	background-color: white;
-	border-radius: 2px;
-}
-.hamburger .bar::before, .hamburger .bar::after{
-	content: '';
-	position: absolute;
-	width: 60%;
-	left: 50%;
-	height: 100%;
-	background-color: inherit;
-	border-radius: 2px;
-	transform: translateX(-50%);
-}
-.hamburger .bar::before{
-	top: -4.5px;
-}
-.hamburger .bar::after{
-	top: 4.5px;
-}
+
 main{
 	position: relative;
 	height: 100vh;
