--- a/justice/contacts.css
+++ b/justice/contacts.css
@@ -8,6 +8,17 @@
 body{
     height: 100%;
 }
+@media only screen and (max-width: 800px){
+	header ul{visibility: hidden;}
+  }
+@media only screen and (max-width: 1400px){
+	.logo{position:relative; left: 40px;}
+  }
+@media only screen and (max-width: 1400px){
+	.contact-us{position:relative; left: 40px;}
+  }
+
+  
 .btn{
 	position: relative;
 	top: 0;
